[metadata]
name = molecule-docker
url = https://github.com/sensu/molecule-docker
project_urls =
    Bug Tracker = https://github.com/sensu/molecule-docker/issues
    Release Management = https://github.com/sensu/molecule-docker/releases
    CI = https://github.com/sensu/molecule-docker/actions
    Documentation = https://github.com/sensu/molecule-docker
    Source Code = https://github.com/sensu/molecule-docker
description = Sensu's fork of Molecule Docker driver for Ansible role testing
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Sensu
author_email = support@sensu.io
maintainer = Sensu
maintainer_email = support@sensu.io
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable

    Environment :: Console

    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators

    License :: OSI Approved :: MIT License

    Natural Language :: English

    Operating System :: OS Independent

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

    Topic :: System :: Systems Administration
    Topic :: Utilities
keywords =
    ansible
    docker
    testing
    molecule
    sensu

[options]
use_scm_version = True
python_requires = >=3.8
package_dir =
  = src
packages = find:
include_package_data = True
zip_safe = False
# These are required in actual runtime:
install_requires =
    molecule >= 4.0.0
    # selinux python module is needed as least by ansible-docker modules
    # and allows use of isolated (default) virtualenvs. It does not avoid need
    # to install the system selinux libraries but it will provide a clear
    # message when user has to do that.
    selinux; sys_platform=="linux2"
    selinux; sys_platform=="linux"
    docker >= 4.3.1
    requests  # also required by docker

[options.extras_require]
docs =
    simplejson
    Sphinx
    sphinx_ansible_theme >= 0.2.2
lint =
    pre-commit >= 1.21.0
test =
    molecule[test]

[options.entry_points]
molecule.driver =
    docker = molecule_docker.driver:Docker

[options.packages.find]
where = src

[tool:pytest]
addopts = --doctest-modules --durations 10 --color=yes
doctest_optionflags = ALLOW_UNICODE ELLIPSIS
norecursedirs = dist doc build .tox .eggs

filterwarnings =
    # treat warnings as errors unless we add them below
    error
    # ignore::UserWarning
markers =
    extensive: marks tests that we want to skip by default, as they are indirectly covered by other tests

[flake8]
# do not add excludes for files in repo
exclude = .venv/,.tox/,dist/,build/,.eggs/
format = pylint
# E203: https://github.com/python/black/issues/315
ignore = E741,W503,W504,H,E501,E203,D102
# TODO(ssbarnea): remove temporary skips one by one:
# [D102] Missing docstring in public method
# [D104] Missing docstring in public package
# 88 is official black default:
max-line-length = 88
per-file-ignores =
  docs/conf.py: D
